# trajectory_planning_actions

./: CMakeLists.txt  package.xml
action/: CheckCollisionFreePath.action  PlanCollisionFreePath.action
